k8s/KubernetesPod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    some-label: nextjs
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: instancePurpose
                operator: In
                values:
                - deployment
      containers:
      - name: nextjs
        image: public.ecr.aws/n3g1a9g4/custom-image:test-docker-3
        command: ["sh", "-c"]
        args: ['\$(JENKINS_SECRET)', '\$(JENKINS_NAME)']
        tty: true
        SecurityContext:
          runAsUser: 1000
          runAsGroup: 1000
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false        
        volumeMounts:
        - mountPath: /home/jenkins/.cache
          name: jenkins-cache
        - mountPath: /home/jenkins/agent
          name: workspace-volume
          readOnly: false              
      volumes:
        - name: jenkins-cache
          persistentVolumeClaim: 
            claimName: jenkins-cache
        - type: EmptyDir
          name: workspace-volume
